added feature to expand/hide

--- a/guides/alberta/2.html
+++ b/guides/alberta/2.html
@@ -116,9 +116,9 @@
 </ul>
     <h3>Defintions</h3>
 
-<details><summary>Spouse</summary> refers to a person you are legally married to.&nbsp;</p>
+<details><summary class="wb-toggle" data-toggle='{"print": "on"}'>Spouse</summary> refers to a person you are legally married to.&nbsp;</p>
 </details>
-<details><summary>
+<details><summary class="wb-toggle" data-toggle='{"print": "on"}'>
 Common-law partner </summary>refers to a person who is not your spouse, but with whom you are in a conjugal relationship and <strong>at least one</strong> of the following <span class="nowrap">conditions applies</span>:</p>
 <ul>
 <li>This person has been living with you in a conjugal relationship for at least <span class="nowrap">12 continuous</span> months (including any period of time where you were separated for less than <span class="nowrap">90 days</span> because of a breakdown in the relationship)</li>
@@ -127,7 +127,7 @@ Common-law partner </summary>refers to a person who is not your spouse, but with
 </ul>
 
 </details>
-<details><summary>End of the year </summary>means<strong> any </strong>of the following dates:</p>
+<details><summary class="wb-toggle" data-toggle='{"print": "on"}'>End of the year </summary>means<strong> any </strong>of the following dates:</p>
 <ul>
 <li><span class="nowrap">December 31</span>, 2022</li>
 <li>the date you left Canada if you emigrated <span class="nowrap">in 2022</span></li>
