--- a/guides/alberta/3.html
+++ b/guides/alberta/3.html
@@ -70,7 +70,7 @@
 		 <li><mark>Determine your taxable income by using the tax rate</mark>
 	 
 		 
-         <details><summary>Alberta tax rates for 2022</summary>
+         <details><summary class="wb-toggle" data-toggle='{"print": "on"}'>Alberta tax rates for 2022</summary>
          <p>The following tax rates are used in the calculation of your Alberta tax on taxable income:</p>
          <ul>
             <li><span class="nowrap">10% on</span> the portion of your taxable income that <span class="nowrap">is $134,238</span>&nbsp;or less, <strong>plus</strong></li>
@@ -86,7 +86,7 @@
 		 <li><h3><mark>Fill out</mark>
         Part B  – Alberta non-refundable tax credits</h3>
          <p>The eligibility conditions and rules for claiming most Alberta <span class="nowrap">non-refundable</span> tax credits are the same as those for the federal <span class="nowrap">non-refundable</span> tax credits. However, the amount and calculation of most Alberta <span class="nowrap">non-refundable</span> tax credits are different from the corresponding federal credits.</p>
-         <details><summary><mark>If you are a newcomer to Canada and emigrant</mark></summary>
+         <details><summary class="wb-toggle" data-toggle='{"print": "on"}'><mark>If you are a newcomer to Canada and emigrant</mark></summary>
 		
          <p>As a newcomer or an emigrant, you may be limited in the amount you can claim for certain provincial <span class="nowrap">non-refundable</span> tax credits.</p>
          <p>If you reduced your claim for any of the following federal amounts, you also need to reduce your claim for the corresponding provincial amount in the same manner:</p>
@@ -143,15 +143,15 @@
 		 <ul class="list-unstyled">
 		
          <li><details>
-            <summary>Line 58120 – Spouse or common-law partner amount</summary>
+            <summary class="wb-toggle" data-toggle='{"print": "on"}'>Line 58120 – Spouse or common-law partner amount</summary>
             <p>You can claim this amount if the rules are met for claiming the amount on <span class="nowrap"><a href="/en/revenue-agency/services/tax/individuals/topics/about-your-tax-return/tax-return/completing-a-tax-return/deductions-credits-expenses/line-30300-spouse-common-law-partner-amount.html">line 30300</a></span> of your <span class="nowrap">return</span> and your spouse's or common-law partner's net income from <span class="nowrap"><a href="/en/revenue-agency/services/tax/individuals/topics/about-your-tax-return/tax-return/completing-a-tax-return/deductions-credits-expenses/line-23600-net-income.html">line 23600</a></span> of their return (or the amount that it would be if they filed a return) is <strong><span class="nowrap">less than&nbsp;$19,814</span></strong>.</p>
          </details></li>
          <li><details>
-            <summary>Line 58160 – Amount for an eligible dependant</summary>
+            <summary class="wb-toggle" data-toggle='{"print": "on"}'>Line 58160 – Amount for an eligible dependant</summary>
             <p>You can claim this amount if the rules are met for claiming the amount on <span class="nowrap"><a href="/en/revenue-agency/services/tax/individuals/topics/about-your-tax-return/tax-return/completing-a-tax-return/deductions-credits-expenses/line-30400-amount-eligible-dependant.html">line 30400</a></span> of your <span class="nowrap">return</span> and your dependant's net income from <span class="nowrap"><a href="/en/revenue-agency/services/tax/individuals/topics/about-your-tax-return/tax-return/completing-a-tax-return/deductions-credits-expenses/line-23600-net-income.html">line 23600</a></span> of their return (or the amount that it would be if they filed a return) is&nbsp;<strong><span class="nowrap">less than&nbsp;$19,814.</span></strong></p>
          </details></li>
          <li><details>
-            <summary>Line 58200 – Amount for infirm dependants <span class="nowrap">age 18</span> or older</summary>
+            <summary class="wb-toggle" data-toggle='{"print": "on"}'>Line 58200 – Amount for infirm dependants <span class="nowrap">age 18</span> or older</summary>
             <p>You can claim up <span class="nowrap">to $11,470</span> for each of your (or your spouse's or common-law partner's) dependent children or grandchildren born <span class="nowrap">in 2004</span> or earlier who has an impairment in physical or mental functions.</p>
             <p>You can also claim this amount for more than one person if each one meets <strong>all </strong>of the following conditions:</p>
             <ul>
@@ -199,7 +199,7 @@
             <p>If you and another person support the same dependant, you can split the claim for that dependant. However, the total amount of your claim and the other person's claim cannot be more than the maximum amount allowed for that dependant.</p>
             </details></li>
          <li><details>
-            <summary>Line 58330 – Adoption expenses</summary>
+            <summary class="wb-toggle" data-toggle='{"print": "on"}'>Line 58330 – Adoption expenses</summary>
             <p>You can claim this amount if the rules are met for claiming the amount on <span class="nowrap"><a href="/en/revenue-agency/services/tax/individuals/topics/about-your-tax-return/tax-return/completing-a-tax-return/deductions-credits-expenses/line-31300-adoption-expenses.html?utm_campaign=not-applicable&utm_medium=vanity-url&utm_source=canada-ca_line-31300.html">line 31300</a></span> of your return.</p>
             <p>You can claim up <span class="nowrap">to $13,552</span> of eligible expenses for each child.</p>
             <p>Two adoptive parents can split the amount if the total combined claim for eligible expenses for each child is not more than the amount before the split.</p>
@@ -214,7 +214,7 @@
             </section>
            
          </details></li>
-         <li><details><summary>Line 58360 – Pension income amount</summary>
+         <li><details><summary class="wb-toggle" data-toggle='{"print": "on"}'>Line 58360 – Pension income amount</summary>
          <p>The amount you can claim on <span class="nowrap">line 58360</span> is the amount on <span class="nowrap"><a href="/en/revenue-agency/services/tax/individuals/topics/about-your-tax-return/tax-return/completing-a-tax-return/deductions-credits-expenses/line-31400-pension-income-amount.html">line 31400</a></span> of your return <span class="nowrap"><strong>or</strong> $1,526</span>, <strong>whichever is less</strong>.</p>
          <section class="panel panel-default">
          <header class="panel-heading">
@@ -227,7 +227,7 @@
         
          </section>
          </details></li>
-         <li><details><summary>Line 58400 – Caregiver amount</summary>
+         <li><details><summary class="wb-toggle" data-toggle='{"print": "on"}'>Line 58400 – Caregiver amount</summary>
          <p>If, at any time <span class="nowrap">in 2022,</span> you (alone or with another person) kept a dwelling where you and one or more of your dependants lived, you may be able to claim up <span class="nowrap">to $11,470</span> for each dependant.</p>
          <p>Each dependant must be <strong>one</strong> of the following:</p>
          <ul>
@@ -276,12 +276,12 @@
          </div>
          </section>
          </details></li>
-         <li><details><summary>Line 58440 – Disability amount for self</summary>
+         <li><details><summary class="wb-toggle" data-toggle='{"print": "on"}'>Line 58440 – Disability amount for self</summary>
          <p>You can claim this amount if the rules are met for claiming the amount on <span class="nowrap"><a href="/en/revenue-agency/services/tax/individuals/topics/about-your-tax-return/tax-return/completing-a-tax-return/deductions-credits-expenses/line-31600-disability-amount-self.html">line 31600</a></span> of your <span class="nowrap">return</span>.</p>
          <p>If you were <strong><span class="nowrap">18 years</span> of age or older</strong> at the end of the year, <span class="nowrap">enter $15,284</span> on <span class="nowrap">line 58440</span> of your <span class="nowrap"><a href="/en/revenue-agency/services/forms-publications/tax-packages-years/general-income-tax-benefit-package/alberta/5009-c.html">Form AB428</a></span>.</p>
          <p>If you were <strong>under <span class="nowrap">18 years</span> of age</strong> at the end of the year, use <a href="/en/revenue-agency/services/forms-publications/tax-packages-years/general-income-tax-benefit-package/alberta/5009-d.html"><span class="nowrap">Worksheet AB428</span></a> to calculate the amount to enter on <span class="nowrap">line 58440</span>.</p>
          </details></li>
-         <li><details><summary>Line 58480 – Disability amount transferred from a dependant</summary>
+         <li><details><summary class="wb-toggle" data-toggle='{"print": "on"}'>Line 58480 – Disability amount transferred from a dependant</summary>
          <p>You can claim this amount if the rules are met for claiming the amount on <span class="nowrap"><a href="/en/revenue-agency/services/tax/individuals/topics/about-your-tax-return/tax-return/completing-a-tax-return/deductions-credits-expenses/line-31800-disability-amount-transferred-a-dependant.html">line 31800</a></span> of your <span class="nowrap">return</span>.</p>
          <section class="panel panel-default">
          <header class="panel-heading">
@@ -294,7 +294,7 @@
          </div>
          </section>
          </details></li>
-         <li><details><summary>Line 58560 – Your unused tuition and education amounts</summary>
+         <li><details><summary class="wb-toggle" data-toggle='{"print": "on"}'>Line 58560 – Your unused tuition and education amounts</summary>
          <p>Complete <a href="/en/revenue-agency/services/forms-publications/tax-packages-years/general-income-tax-benefit-package/alberta/5009-s11.html"><span class="nowrap">Schedule AB(S11)</span>, Alberta Tuition and Education Amounts</a>.</p>
          <h5>Carrying forward amounts</h5>
          <p>Complete the “Carryforward of unused amounts” section&nbsp;of <span class="nowrap">Schedule AB(S11)</span> to calculate the amount you can carry forward to a future year.&nbsp;</p>
@@ -302,10 +302,10 @@
          <h5>Supporting documents</h5>
          <p>If you are filing a paper return, attach your completed <span class="nowrap">Schedule AB(S11)</span>. Keep your supporting documents in case you are asked to provide them later.</p>
          </details></li>
-         <li><details><summary>Line 58689 – Medical expenses for self, spouse or common-law partner, and your dependent children born <span class="nowrap">in&nbsp;2005</span> or later</summary>
+         <li><details><summary class="wb-toggle" data-toggle='{"print": "on"}'>Line 58689 – Medical expenses for self, spouse or common-law partner, and your dependent children born <span class="nowrap">in&nbsp;2005</span> or later</summary>
          <p>The medical expenses you can claim on <span class="nowrap">line 58689</span> are the same as those you can claim on <span class="nowrap"><a href="/en/revenue-agency/services/tax/individuals/topics/about-your-tax-return/tax-return/completing-a-tax-return/deductions-credits-expenses/lines-33099-33199-eligible-medical-expenses-you-claim-on-your-tax-return.html">line 33099</a></span> of your <span class="nowrap"><span class="nowrap">return</span></span>. They also have to cover the same <span class="nowrap">12-month period</span> ending <span class="nowrap">in 2022</span> and must be expenses that were not claimed <span class="nowrap">for 2021.</span></p>
          </details></li>
-         <li><details><summary>Line 58729 – Allowable amount of medical expenses for other dependants</summary>
+         <li><details><summary class="wb-toggle" data-toggle='{"print": "on"}'>Line 58729 – Allowable amount of medical expenses for other dependants</summary>
          <p>You can claim medical expenses for other dependants in addition to the medical expenses for self, spouse or common-law partner, and your dependent children born <span class="nowrap">in 2005</span> or later on <span class="nowrap"><a href="#P99_11052">line 58689</a>.</span></p>
          <p>The medical expenses you can claim on <span class="nowrap">line 58729</span> are the same as those you can claim on <span class="nowrap"><a href="/en/revenue-agency/services/tax/individuals/topics/about-your-tax-return/tax-return/completing-a-tax-return/deductions-credits-expenses/lines-33099-33199-eligible-medical-expenses-you-claim-on-your-tax-return.html">line 33199</a></span> of your <span class="nowrap"><span class="nowrap">return</span></span>. They also have to cover the same <span class="nowrap">12-month period</span> ending <span class="nowrap">in 2022</span> and must be expenses that were not claimed <span class="nowrap">for 2021.</span></p>
          </details></li>
@@ -314,20 +314,20 @@
 		<li><h3><mark>Fill out</mark>
        Part C – Alberta tax</h3>
 		 <ul class="list-unstyled">
-         <li><details><summary>Line 53 – Alberta tax on split income</summary>
+         <li><details><summary class="wb-toggle" data-toggle='{"print": "on"}'>Line 53 – Alberta tax on split income</summary>
          <p>If you are reporting federal tax on split income on <span class="nowrap"><a href="/en/revenue-agency/services/forms-publications/tax-packages-years/general-income-tax-benefit-package/5000-g/income-tax-benefit-guide-federal-non-refundable-tax-credits.html#Line424">line 40424</a></span> of your return,<span class="nowrap"> complete</span> <span class="nowrap">Part 3</span> of <a href="/en/revenue-agency/services/forms-publications/forms/t1206.html"><span class="nowrap">Form T1206</span>, Tax on Split Income</a>, to calculate the Alberta tax to enter on <span class="nowrap"><a href="/en/revenue-agency/services/forms-publications/tax-packages-years/general-income-tax-benefit-package/5000-g/income-tax-benefit-guide-federal-non-refundable-tax-credits.html#Line42800">line 42800</a></span> of your return.</p>
          </details></li>
-         <li><details><summary>Line&nbsp;60 – Alberta additional tax for minimum tax purposes</summary>
+         <li><details><summary class="wb-toggle" data-toggle='{"print": "on"}'>Line&nbsp;60 – Alberta additional tax for minimum tax purposes</summary>
          <p>If you need to pay federal minimum tax as calculated on <a href="/en/revenue-agency/services/forms-publications/forms/t691.html"><span class="nowrap">Form&nbsp;T691</span>, Alternative Minimum Tax</a>, complete the calculation on <span class="nowrap">line&nbsp;60</span> of your <span class="nowrap"><a href="/en/revenue-agency/services/forms-publications/tax-packages-years/general-income-tax-benefit-package/alberta/5009-c.html">Form&nbsp;AB428</a></span> to determine your Alberta additional tax for minimum tax&nbsp;purposes.</p>
          </details></li>
-         <li><details><summary>Line 62 – Provincial foreign tax credit</summary>
+         <li><details><summary class="wb-toggle" data-toggle='{"print": "on"}'>Line 62 – Provincial foreign tax credit</summary>
          <p>If your federal foreign tax credit on non-business income is less than the related tax you paid to a foreign country, you may be able to claim a provincial foreign tax credit.</p>
          <h5>How to claim this credit</h5>
          <p>Complete <a href="/en/revenue-agency/services/forms-publications/forms/t2036.html"><span class="nowrap">Form T2036</span>, Provincial or Territorial Foreign Tax Credit</a>.</p>
          <h5>Supporting documents</h5>
          <p>If you are filing a paper return, attach your <span class="nowrap">Form T2036.</span></p>
 		 </details></li>
-         <li><details><summary>Line 65 – Alberta political contributions tax credit</summary>
+         <li><details><summary class="wb-toggle" data-toggle='{"print": "on"}'>Line 65 – Alberta political contributions tax credit</summary>
          <p>You can claim this credit if, <span class="nowrap">in 2022</span>, you contributed to one of the following individuals or entities:</p>
          <ul>
          <li>a candidate under an election to the provincial legislature or a senatorial election</li>
@@ -360,12 +360,12 @@
 		</li>
 		<li><h3><mark>Fill out</mark> Part D – Alberta credits</h3>
 		 <ul class="list-unstyled">
-         <li><details><summary>Line 67 – Unused Alberta investor tax credit</summary>
+         <li><details><summary class="wb-toggle" data-toggle='{"print": "on"}'>Line 67 – Unused Alberta investor tax credit</summary>
          <p>You can claim your unused Alberta investor tax credit amounts from investments made <span class="nowrap">in 2019</span> or earlier in the following four tax years, up to a maximum <span class="nowrap">of $60,000</span> per tax year.</p>
          <h5>How to claim this credit</h5>
          <p>Enter, on <span class="nowrap">line 67</span> of your <a href="/en/revenue-agency/services/forms-publications/tax-packages-years/general-income-tax-benefit-package/alberta/5009-c.html"><span class="nowrap">Form AB428</span></a>, the amount of unused Alberta investor tax credit from <span class="nowrap">your 2021</span> notice of assessment or reassessment you are claiming <span class="nowrap">in 2022</span>.</p>
          </details></li>
-         <li><details><summary>Line 68 – Alberta stock savings plan tax credit</summary>
+         <li><details><summary class="wb-toggle" data-toggle='{"print": "on"}'>Line 68 – Alberta stock savings plan tax credit</summary>
          <p>If you had any unused stock savings plan tax credit amount to be applied <span class="nowrap">in 2022,</span> complete <a href="/en/revenue-agency/services/forms-publications/forms/t89.html"><span class="nowrap">Form T89,</span> Alberta Stock Savings Plan Tax Credit</a>.</p>
          <h5>How to claim this credit</h5>
          <p>Enter, on <span class="nowrap">line 68</span> of your <span class="nowrap"><a href="/en/revenue-agency/services/forms-publications/tax-packages-years/general-income-tax-benefit-package/alberta/5009-c.html">Form AB428</a></span>, the credit calculated on your <span class="nowrap">Form T89.</span></p>
