--- a/subway/uht/complete-return.html
+++ b/subway/uht/complete-return.html
@@ -877,7 +877,7 @@ margin-left: 38px;
 		<details>
 			<summary>Corporations outside of Canada</summary>
 			<p>If you need to get a business number (BN), register through: <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/registering-your-business/register.html#nr-bn_accregistrtn_webform" target="_blank">Non-resident business number</a>.</p>
-			<p>If you need to get an Underused Housing Tax (RU) program account identifier code, register through: <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/registering-your-business/register.html#uht_webform">Non-res UHT anchor link</a></p>
+			<p>If you need to get an Underused Housing Tax (RU) program account identifier code, register through: <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/registering-your-business/register.html#uht_webform">Non-resident Underused Housing Tax registration form</a>.</p>
 			<p>If you are a non-resident corporation and you have a question about obtaining a BN or registering your RU program account, the physical location of your business outside Canada will determine the telephone number that you must use to call the CRA.</p>
 <p>To determine which phone number is applicable to you, refer to: <a href="https://www.canada.ca/en/revenue-agency/corporate/contact-information/non-resident-gst-hst-enquiries.html" target="_blank">Non-resident enquiries</a>.</p>
 		</details>
