added labels as examples

--- a/guides/alberta/3.html
+++ b/guides/alberta/3.html
@@ -65,20 +65,22 @@
          </div>
         <ol class="lst-stps ld-zr">
 		<li><h3><mark>Fill out</mark>Part A – Alberta tax on taxable income</h3>
-		 <ol>
+		<ol class="lst-stps-sub">
 		 <li><mark>Enter your taxable income from line 26000 of your federal tax return.</mark></li>
 		 <li><mark>Determine your taxable income by using the tax rate</mark>
 	 
 		 
-         <details><summary class="wb-toggle" data-toggle='{"print": "on"}'>Alberta tax rates for 2022</summary>
+         <details class="mrgn-tp-md"><summary class="wb-toggle" data-toggle='{"print": "on"}'>Alberta tax rates for 2022 <span class="label label-warning">New rates for 2022</span></summary>
          <p>The following tax rates are used in the calculation of your Alberta tax on taxable income:</p>
-         <ul>
-            <li><span class="nowrap">10% on</span> the portion of your taxable income that <span class="nowrap">is $134,238</span>&nbsp;or less, <strong>plus</strong></li>
-            <li><span class="nowrap">12% on</span> the portion of your taxable income that is more <span class="nowrap">than $134,238</span>&nbsp;but not more <span class="nowrap">than $161,086</span>, <strong>plus</strong></li>
-            <li><span class="nowrap">13% on</span> the portion of your taxable income that is more <span class="nowrap">than $161,086</span>&nbsp;but not more than <span class="nowrap">$214,781</span>,<strong> plus</strong></li>
-            <li><span class="nowrap">14% on</span> the portion of your taxable income that is more <span class="nowrap">than $214,781</span>&nbsp;but not more <span class="nowrap">than $322,171</span>, <strong>plus</strong></li>
-            <li><span class="nowrap">15% on</span> the portion of your taxable income that is more <span class="nowrap">than $322,171</span></li>
-         </ul>
+         <ul class="fa-ul">
+<li><span class="nowrap">10% on</span> the portion of your taxable income that <span class="nowrap">is $134,238</span>&nbsp;or less, <strong>plus</strong></li>
+<li><span class="fas fa-plus text-muted fa-li"></span> <span class="nowrap">12% on</span> the portion of your taxable income that is more <span class="nowrap">than $134,238</span>&nbsp;but not more <span class="nowrap">than $161,086</span>, <strong>plus</strong></li>
+<li><span class="fas fa-plus text-muted fa-li"></span><span class="nowrap">13% on</span> the portion of your taxable income that is more <span class="nowrap">than $161,086</span>&nbsp;but not more than <span class="nowrap">$214,781</span>,<strong> plus</strong></li>
+<li><span class="fas fa-plus text-muted fa-li"></span><span class="nowrap">14% on</span> the portion of your taxable income that is more <span class="nowrap">than $214,781</span>&nbsp;but not more <span class="nowrap">than $322,171</span>, <strong>plus</strong></li>
+<li><span class="fas fa-plus text-muted fa-li"></span><span class="nowrap">15% on</span> the portion of your taxable income that is more <span class="nowrap">than $322,171</span></li>
+<li class="brdr-tp"><mark><span class="fas fa-equals text-muted fa-li"></span>Alberta tax on taxable income</span></mark></li>
+
+</ul>
 		 </details></li>
 		 
 		 </ol>
@@ -151,7 +153,7 @@
             <p>You can claim this amount if the rules are met for claiming the amount on <span class="nowrap"><a href="/en/revenue-agency/services/tax/individuals/topics/about-your-tax-return/tax-return/completing-a-tax-return/deductions-credits-expenses/line-30400-amount-eligible-dependant.html">line 30400</a></span> of your <span class="nowrap">return</span> and your dependant's net income from <span class="nowrap"><a href="/en/revenue-agency/services/tax/individuals/topics/about-your-tax-return/tax-return/completing-a-tax-return/deductions-credits-expenses/line-23600-net-income.html">line 23600</a></span> of their return (or the amount that it would be if they filed a return) is&nbsp;<strong><span class="nowrap">less than&nbsp;$19,814.</span></strong></p>
          </details></li>
          <li><details>
-            <summary class="wb-toggle" data-toggle='{"print": "on"}'>Line 58200 – Amount for infirm dependants <span class="nowrap">age 18</span> or older</summary>
+            <summary class="wb-toggle" data-toggle='{"print": "on"}'>Line 58200 – Amount for infirm dependants <span class="nowrap">age 18</span> or older <span class="label label-warning">New for 2022 (example label)</span></summary>
             <p>You can claim up <span class="nowrap">to $11,470</span> for each of your (or your spouse's or common-law partner's) dependent children or grandchildren born <span class="nowrap">in 2004</span> or earlier who has an impairment in physical or mental functions.</p>
             <p>You can also claim this amount for more than one person if each one meets <strong>all </strong>of the following conditions:</p>
             <ul>
