trying to fix css

--- a/guides/alberta/onepager.html
+++ b/guides/alberta/onepager.html
@@ -20,7 +20,8 @@
             document.write(wet.builder.refTop({
             }));
          </script>
-		 <link href="https://www.canada.ca/etc/designs/canada/wet-boew/m%C3%A9li-m%C3%A9lo/2023-10-mount-revelstoke.min.css" rel="stylesheet">
+		 <link rel="stylesheet" href="https://www.canada.ca/etc/designs/canada/wet-boew/css/theme.min.css"/>
+	  <link href="https://www.canada.ca/etc/designs/canada/wet-boew/m%C3%A9li-m%C3%A9lo/2023-10-mount-revelstoke.min.css" rel="stylesheet">
       </head>
       <body vocab="http://schema.org/" typeof="WebPage">
          <div id="def-top"> </div>
