--- a/subway/uht/complete-return.html
+++ b/subway/uht/complete-return.html
@@ -852,7 +852,7 @@ margin-left: 38px;
 		</details>
 		<details>
 		<summary>Temporary residents (use a TTN)</summary>
-	<p>If you do not have a TTN, <a href="https://test.canada.ca/cra-arc/subway/uht/contact.html">contact the CRA.</a></p> 
+	<p>If you do not have a TTN, <a href="https://test.canada.ca/cra-arc/subway/uht/contact.html">contact the CRA</a>.</p> 
 			<p>Issuing a TTN is a decision that is internally made by the CRA.</p>
 
 
