--- a/subway/uht/complete-return.html
+++ b/subway/uht/complete-return.html
@@ -999,7 +999,7 @@ margin-left: 38px;
 			<p>A qualifying occupancy period is at least 1 month in a calendar year where certain individuals (qualifying occupants) have continuous occupancy. Qualifying occupancy periods can be longer than 1 month, but not shorter than 1 month. </p>
 
 <details>
-	<summary>Example of qualifying occupancy</summary>
+	<summary class="mrgn-tp-md">Example of qualifying occupancy</summary>
 	<p>You own a residential property. Your parent, who is a Canadian citizen, lives at the property during the months of March - April, June - August, and November - December.</p>
 	<p>In 2023, they lived there for a total of 197 days, making them qualify for the qualifying occupany exemption.</p>
 </details>
