--- a/subway/uht/complete-return.html
+++ b/subway/uht/complete-return.html
@@ -1001,7 +1001,7 @@ margin-left: 38px;
 <details>
 	<summary class="mrgn-tp-md">Example of qualifying occupancy</summary>
 	<p>You own a residential property. Your parent, who is a Canadian citizen, lives at the property during the months of March - April, June - August, and November - December.</p>
-	<p>In 2023, they lived there for a total of 197 days, making them qualify for the qualifying occupany exemption.</p>
+	<p>In 2023, they lived there for a total of 197 days, making them qualify for the exemption of qualifying occupany.</p>
 </details>
 
 
