--- a/subway/uht/complete-return.html
+++ b/subway/uht/complete-return.html
@@ -801,7 +801,7 @@ margin-left: 38px;
 		 <p>You <strong>must still file</strong> a return even if your ownership of the property qualifies for an exemption and you do not owe any tax.</p>
 		
 
-	        <h2>Filling out the return</h2>
+	        <h2>How to fill out the return</h2>
 <p>Follow the steps below to help you fill out the parts of your return. </p>
 <h3>What return form to use</h3>
 <ul class="fa-ul">
