--- a/subway/uht/pay-tax.html
+++ b/subway/uht/pay-tax.html
@@ -822,22 +822,26 @@ margin-left: 38px;
 			
 <h3>Pay online</h3>
 
-	<p>If you are an <strong>individual</strong>, you may pay using <a href="https://www.canada.ca/en/revenue-agency/services/e-services/payment-save-time-pay-online.html">My Payment</a>. When making your payment, you may <strong>only</strong> use the "Underused Housing Tax" option.</p>
+	<p>Whether you are an individual or a corporation, you may pay using <a href="https://www.canada.ca/en/revenue-agency/services/e-services/payment-save-time-pay-online.html" target="_blank">My Payment</a>.</p>
 
-
-	<p>If you are a <strong>corporation</strong>, you may pay using any of the following methods:</p>
+<details>
+	<summary>If you are an individual</summary>
+	<p>When making your payment through My Payment, you may <strong>only</strong> use the "Underused Housing Tax" option.</p>
+</details>
+<details>
+	<summary>If you are a corporation</summary>
+	<p>When making your payment through My Payment, you may <strong>only</strong> use “amount owing” or “payment on filing” options.</p>
+<p>As a corporation, you may also pay using either of the following methods:</p>
 <ul>
-  <li><a href="https://www.canada.ca/en/revenue-agency/services/e-services/payment-save-time-pay-online.html">My Payment</a></li>
-	<li><a href="https://www.canada.ca/en/revenue-agency/services/about-canada-revenue-agency-cra/pay-online-banking.html">Online banking</a></li>
+
+<li><a href="https://www.canada.ca/en/revenue-agency/services/about-canada-revenue-agency-cra/pay-online-banking.html">Online banking</a></li>
   <li>Online banking with your Canadian financial institution</li>
   
 </ul>
 
-<p>When making your payment, you may <strong>only</strong> use “amount owing” or “payment on filing” options.</p>
 </details>
-		 
 
- 
+
 
 
 <h3>Pay by wire transfer or internationally issued credit card</h3>
