added font awesome CSS

--- a/guides/alberta/onepager.html
+++ b/guides/alberta/onepager.html
@@ -22,6 +22,7 @@
          </script>
 
 	  <link href="https://www.canada.ca/etc/designs/canada/wet-boew/m%C3%A9li-m%C3%A9lo/2023-10-mount-revelstoke.min.css" rel="stylesheet">
+	        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous" />
       </head>
       <body vocab="http://schema.org/" typeof="WebPage">
          <div id="def-top"> </div>
