--- a/subway/uht/complete-return.html
+++ b/subway/uht/complete-return.html
@@ -854,7 +854,7 @@ margin-left: 38px;
 		<summary>Temporary residents (use a TTN)</summary>
 	
 			<p>Issuing a TTN is a decision that is made by the CRA.</p>
-<p>If you do not have a TTN and think you might need one, you must <a href="https://test.canada.ca/cra-arc/subway/uht/contact.html">contact us/a>.</p> 
+<p>If you do not have a TTN and think you might need one, you must <a href="https://test.canada.ca/cra-arc/subway/uht/contact.html">contact us</a>.</p> 
 
 
 		
