--- a/subway/uht/file-return.html
+++ b/subway/uht/file-return.html
@@ -776,7 +776,7 @@ html:lang(fr) .cnjnctn-or:before {
 	       <ul><ul><li>One of the requirements is to <a href="https://apps.cra-arc.gc.ca/ebci/sres/ext/pub/ntrDc.action?utm_source=Canada_dot_ca&amp;utm_medium=News_Item" target="_blank">get a Digital Access Code (DAC)</a></li></ul></ul>
 
 <details>
-	<summary>If you are an <strong>individual</strong> (Canadian citizens and permanent residents only)</summary>
+	<summary class="mrgn-tp-md">If you are an <strong>individual</strong> (Canadian citizens and permanent residents only)</summary>
 
 <p>You can also submit your return using <a href="https://www.canada.ca/en/revenue-agency/services/e-services/e-services-individuals/account-individuals.html" target="_blank">My Account</a></p>
     <ul><li>Fill out the UHT2900, Underused Housing Tax Return and Election Form (PDF) and upload it through your CRA My Account</li></ul></ul>
