--- a/subway/uht/file-return.html
+++ b/subway/uht/file-return.html
@@ -781,7 +781,7 @@ html:lang(fr) .cnjnctn-or:before {
 <p>You can also submit your return using <a href="https://www.canada.ca/en/revenue-agency/services/e-services/e-services-individuals/account-individuals.html" target="_blank">My Account</a></p>
     <ul><li>Fill out the UHT2900, Underused Housing Tax Return and Election Form (PDF) and upload it through your CRA My Account</li></ul></ul>
 	     
-	 <ul><li>To register, refer to: <a href="https://www.canada.ca/en/revenue-agency/services/e-services/cra-login-services/cra-user-password-help-faqs/registration-process-access-cra-login-services.html#hlp1a" target="_blank">How to register for My Account</a></li></ul>
+	 <ul><li><a href="https://www.canada.ca/en/revenue-agency/services/e-services/cra-login-services/cra-user-password-help-faqs/registration-process-access-cra-login-services.html#hlp1a" target="_blank">How to register for My Account</a></li></ul>
 </details>
 
 	      <details>
@@ -789,7 +789,7 @@ html:lang(fr) .cnjnctn-or:before {
 <p>You can also submit the return using <a href="https://www.canada.ca/en/revenue-agency/services/e-services/digital-services-businesses/business-account.html" target="_blank">My Business Account</a></p>
      <ul><li>Fill out the UHT2900, Underused Housing Tax Return and Election Form (PDF) and upload it through your CRA My Account</li></ul>
 	     
-	 <ul><li>To register, refer to: <a href="https://www.canada.ca/en/revenue-agency/services/e-services/cra-login-services/cra-user-password-help-faqs/registration-process-access-cra-login-services.html#hlp1d" target="_blank">How to register for My Business Account</a></li></ul>
+	 <ul><li><a href="https://www.canada.ca/en/revenue-agency/services/e-services/cra-login-services/cra-user-password-help-faqs/registration-process-access-cra-login-services.html#hlp1d" target="_blank">How to register for My Business Account</a></li></ul>
 
 </details>
 
