--- a/subway/uht/pay-tax.html
+++ b/subway/uht/pay-tax.html
@@ -850,32 +850,35 @@ margin-left: 38px;
 
 <h3>Pay by cheque</h3>
 
-<p>If you would like to mail a cheque, make it out in Canadian dollars to: </p>
-<p>The Receiver General for Canada.</p>
+<p>Cheques can be made out to <strong>The Receiver General for Canada</strong>.</p>
+		 <p>Include the following information</p>
+		 <ul>
+			 <li>If you are <strong>individual</strong>:</li>
+		<ul><li>Your tax identifier number (SIN, ITN, or TTN)</li></ul>
+		  <ul><li>The calendar year for which you are paying</li></ul>
+		 <li>If you are a <strong>corporation</strong>:</li>
+			 <ul><li>Your CRA Underused Housing Tax business number (BN-RU)</li></ul>
+			 <ul><li>The calendar year for which you are paying</li></ul>
+		 </ul>
+		 
 
-<p>Include the following information:</p>
+<p>If you are mailing your return, include your cheque with your return and send to your designated tax centre address.</p>
+<p><a href="">Find my designated tax centre address</a></p>
 
-<ul class="list-unstyled cnjnctn-type-or cnjnctn-xs">
-  <li class="cnjnctn-col-70">
-    <h4 class="mrgn-tp-sm text-muted">If you are an individual<span class="wb-inv">: </span></h4>
-    <ul>
-   <li>Your social insurance number (SIN)</li>
-   <li>Your non-resident account number (ITN)</li>
-   <li>The calendar year for which you are paying</li>
-   </ul>
+	
+				<<ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
+  <li class="cnjnctn-col-60">
+    <p>If you have mailed your return and have received a Notice of Assessment with an amount owing</p>
   </li>
   <li class="cnjnctn-col">
-    <h4 class="mrgn-tp-sm text-muted">If you are a corporation<span class="wb-inv">: </span></h4>
-    <ul>
-   <li>Your CRA Underused Housing Tax business number (BN-RU)</li>
-   <li>The calendar year for which you are paying</li>
-   </ul>
+    <p>If you filed electronically and choose to mail a cheque</p>
   </li>
-</ul>
-		 <p>If you are filing by paper, your payment should accompany your return and be sent to the designated TC address. If you have previously filed by paper and have received a Notice of Assessment with an amount owing, send your cheque to the following address:</p>
+ 
+</ul>	 
+		 
+<p>Send your return to:</p>
    <p>Canada Revenue Agency <br> PO Box 3800 STN A <br> Sudbury ON P3A 0C3</p>
    
-   <p>If you filed electronically and choose to mail a cheque, send your cheque to the address noted above.</p>
   
   
 
