more updates to design

--- a/guides/alberta/onepager.html
+++ b/guides/alberta/onepager.html
@@ -120,7 +120,7 @@
 	<ul class="list-unstyled cnjnctn-type-or cnjnctn-xs">
   <li class="cnjnctn-col">
     <h4 class="mrgn-tp-sm text-muted"><mark>Using certified software<span class="wb-inv">: Option 1</span></mark></h4>
-    <p><mark>The necessary forms are automatically generated for you if you use <a href="https://www.canada.ca/en/revenue-agency/services/e-services/digital-services-individuals/netfile-overview/certified-software-netfile-program.html">certified tax software</a>. </mark></p>
+    <p><mark>Forms are automatically generated for you if you use <a href="https://www.canada.ca/en/revenue-agency/services/e-services/digital-services-individuals/netfile-overview/certified-software-netfile-program.html">certified tax software</a></mark></p>
   </li>
   <li class="cnjnctn-col">
     <h4 class="mrgn-tp-sm text-muted"><mark>Using paper forms<span class="wb-inv">: Option 2</span></mark></h4>
