--- a/guides/alberta/onepager.html
+++ b/guides/alberta/onepager.html
@@ -81,7 +81,7 @@
 			 
 			  <h2 class="h3">On this page</h2>
 			  <ul>
-			  <li><a href="#h-1">Find out what's new</a>
+			  <li><a href="#h-1">What's new</a>
 			
 			  </li>
 			   <li><a href="#h-2">File on time to receive benefits on time</a>
@@ -101,7 +101,7 @@
 			  </li>
 			  
 			  </ul>
-			   <h2 id="h-1">Find out what's new</h2>
+			   <h2 id="h-1">What's new</h2>
 			   <p><mark>For 2022:</mark></p>
 	<ul><li>The personal income levels and most provincial <span class="nowrap">non-refundable</span> tax credit amounts have changed.  <mark>Changes are indicated with the <span class="label label-info">Updated amount for 2022</span> label below.</li>
 <li>Contributions to nomination contestants made after <span class="nowrap">March&nbsp;30, 2022</span> will no longer qualify for the political contributions tax credit</li>
