--- a/subway/uht/pay-tax.html
+++ b/subway/uht/pay-tax.html
@@ -851,11 +851,12 @@ margin-left: 38px;
 <h3>Pay by cheque</h3>
 
 <p>Cheques can be made out to <strong>The Receiver General for Canada</strong>.</p>
-		 <p>Include the following information</p>
+		 <p>Include the following information:</p>
 		 <ul>
-			 <li>If you are <strong>individual</strong>:</li>
+			 <li>If you are an <strong>individual</strong>:</li>
 		<ul><li>Your tax identifier number (SIN, ITN, or TTN)</li></ul>
 		  <ul><li>The calendar year for which you are paying</li></ul>
+			 <br>
 		 <li>If you are a <strong>corporation</strong>:</li>
 			 <ul><li>Your CRA Underused Housing Tax business number (BN-RU)</li></ul>
 			 <ul><li>The calendar year for which you are paying</li></ul>
@@ -866,7 +867,7 @@ margin-left: 38px;
 <p><a href="">Find my designated tax centre address</a></p>
 
 	
-				<<ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
+				<ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
   <li class="cnjnctn-col-60">
     <p>If you have mailed your return and have received a Notice of Assessment with an amount owing</p>
   </li>
