--- a/subway/uht/file-return.html
+++ b/subway/uht/file-return.html
@@ -796,7 +796,7 @@ html:lang(fr) .cnjnctn-or:before {
 	      
 	      
       </dd>
-      <dt>By mail</dt>
+      <dt id="bymail">By mail</dt>
       <dd>
         <p>Where to send your return depends on the location of either you (as an individual), or your corporation.</p>
         <div class="wb-frmvld mrgn-bttm-xl">
