--- a/subway/uht/pay-tax.html
+++ b/subway/uht/pay-tax.html
@@ -864,7 +864,7 @@ margin-left: 38px;
 		 
 
 <p>If you are mailing your return, include your cheque with your return and send to your designated tax centre address.</p>
-<p><a href="">Find my designated tax centre address</a></p>
+<p><a href="https://test.canada.ca/cra-arc/subway/uht/file-return.html#bymail">Find my designated tax centre address</a></p>
 
 	
 				<ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
